--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -1,9 +1,9 @@
-name: Deploy Auth Services to EC2
+name: Deploy Auth Service to EC2
 
 on:
   push:
     branches:
-      - main  # ← Ahora se ejecuta cuando haces push a main
+      - main  # se ejecuta en cada push a main
     paths:
       - '**/*'
 
@@ -19,29 +19,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+        # Paso 1: Clonar el código
       - name: Checkout code
         uses: actions/checkout@v4
 
+     # ✅ Paso 3: Ejecutar ESLint solo para errores
+      - name: Run ESLint (only fail on errors)
+        run: npx eslint . --ext .ts
+
+        # Paso 4: Login en Docker Hub
       - name: Login to Docker Hub
         run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
+        # Paso 5: Build & Push Docker image
       - name: Build and push Docker image
         run: |
           docker build -t $DOCKER_USERNAME/domain-auth:latest .
           docker push $DOCKER_USERNAME/domain-auth:latest
 
-      - name: Connect to EC2 and deploy
+        # Paso 6: Deploy en EC2
+      - name: Deploy to EC2 via SSH (run container only)
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ env.EC2_HOST }}
           username: ${{ env.EC2_USERNAME }}
           key: ${{ env.EC2_KEY }}
           script: |
-            if [ ! -d "domain-users" ]; then
-              git clone https://github.com/San-Andreas-Bank/domain-users.git
-            fi
-            cd domain-users
-            git pull
             docker pull $DOCKER_USERNAME/domain-auth:latest
-            docker-compose down
-            docker-compose up -d
+            docker stop domain-auth || true && docker rm domain-auth || true
+            docker run -d --name domain-auth \
+              -p 9000:3000 \
+              --env-file /home/ubuntu/.env.auth \
+              $DOCKER_USERNAME/domain-auth:latest
