--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -50,6 +50,7 @@ jobs:
           key: ${{ env.EC2_KEY }}
           source: ".env"
           target: "/home/ubuntu/.env"
+          strip_components: 1
 
       # Paso 7: Desplegar en EC2
       - name: Deploy to EC2 via SSH (run container only)
